# qdp

./: AUTHORS  ChangeLog  ChangeLog.html  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  index.html  params.json  qdpc.ps
doc/: Makefile.am  Makefile.in  README  functions.texi  make_function_tables.pl  qdp_1p1.tex  qdpc.info  qdpc.texi  qdpdefs.texi
examples/: Makefile.am  Makefile.in  README  congrad_ks.c  congrad_ks.h  congrad_wilson.c  congrad_wilson.h  dslash_ks.c  dslash_wilson.c  plaquette.c  qdp_bench.c  qdp_shifts.c  qdp_test.c  qdp_test_L.c  qdp_threads.c  qdpio_test.c  qdpio_test_L.c  sample_ks.c  sample_wilson.c
include/: Makefile.am  Makefile.in  com_common.h  com_common_internal.h  com_specific.h  qdp.h  qdp_collect.h  qdp_collect_internal.h  qdp_common.h  qdp_config.h.in  qdp_internal.h  qdp_layout.h  qdp_layout_internal.h  qdp_scatter.h  qdp_scatter_internal.h  qdp_shift.h  qdp_shift_internal.h  qdp_string.h  qdp_subset.h  qdp_subset_internal.h  qdp_thread.h
lib/: Makefile.am  Makefile.in  make_qdp_dirs
lib/generate/: QDP_T3_EQOP_T1_times_sT2.c  QDP_T3_EQOP_sT1_times_T2.c  QDP_T3_EQOP_sT1_times_sT2.c  QDP_T_eq_collect_T_funca.c  QDP_T_eq_func.c  QDP_T_eq_funci.c  QDP_T_eq_sT.c  QDP_T_eq_scatter_T.c  QDP_T_veq_sT.c  QDP_create_T.c  QDP_discard_T.c  QDP_expose_T.c  QDP_extract_T.c  QDP_extract_packed_T.c  QDP_read_T.c  QDP_write_T.c  datatypes.pl  functions.pl  generate_headers  generate_qdp.pl  generate_sources  generate_types.pl  generic.pl  make_virtualNc  profile.pl  qdp_color_generic.h  qdp_common_internal.h  qdp_generic.h  qdp_internal.h  qdp_io.h  qdp_pc.h  qdp_precision_generic.h  qdp_profile.h  qdp_types.h  virtualNc.pl
lib/optimized/: Makefile.am  Makefile.in
lib/optimized/qdp_f3/: Makefile.am  Makefile.in
lib/optimized/qdp_f3/src/: QDP_F3_D_vpeq_wilsonspin_M_times_D.c  QDP_F3_V_vpeq_M_times_V.c
lib/qdp_common/: Makefile.am  Makefile.in  com_common.c  layout_hyper.c  layout_shiftopt.c  qdp_collect.c  qdp_common.c  qdp_internal.c  qdp_layout.c  qdp_scatter.c  qdp_shift.c  qdp_subset.c  qdp_thread.c
lib/qdp_d/: Makefile.am  Makefile.in
lib/qdp_d2/: Makefile.am  Makefile.in
lib/qdp_d3/: Makefile.am  Makefile.in
lib/qdp_df/: Makefile.am  Makefile.in
lib/qdp_df2/: Makefile.am  Makefile.in
lib/qdp_df3/: Makefile.am  Makefile.in
lib/qdp_dfn/: Makefile.am  Makefile.in
lib/qdp_dn/: Makefile.am  Makefile.in
lib/qdp_f/: Makefile.am  Makefile.in
lib/qdp_f2/: Makefile.am  Makefile.in
lib/qdp_f3/: Makefile.am  Makefile.in
lib/qdp_fn/: Makefile.am  Makefile.in
lib/qdp_int/: Makefile.am  Makefile.in
other_libs/: Makefile.am  Makefile.in
qdp-1.3.2/: qdpc.ps
qdp-1.3.2/CVS/: Entries  Repository
qdp-1.3.2/html/: Compilation-with-QDP.html  Datatypes.html  Function-Details.html  Introduction.html  QDP-Functions.html  index.html
qdp-1.3.2/html/CVS/: Entries  Repository
qdpc.html/: Adjoint.html  Binary-operations-with-constants.html  Binary-operations-with-fields.html  Boolean-operations.html  Breaking-Color-and-Precision-Uniformity.html  Color-and-Precision-Uniformity.html  Color-argument.html  Compilation-with-QDP.html  Constant-Arguments.html  Creating-and-destroying-lattice-fields.html  Creating-arbitrary-permutations.html  Creating-displacement-shifts.html  Datatypes.html  Defining-a-subset.html  Destroying-a-shift.html  Entry-and-exit-from-QDP.html  Fills-and-random-numbers.html  Function-Details.html  Functions-involving-shifts.html  Generic-Names.html  Header-and-macros.html  I_002fO-utilities.html  Introduction.html  Layout-utilities.html  Libraries.html  Naming-Conventions-for-Data-Parallel-Functions.html  Nonuniform-color-and-precision.html  Opening-and-closing-binary-files.html  Operations-on-arrays-of-fields.html  Optimization-Calls.html  QDP-Functions.html  Reading-and-writing-QDP-fields.html  Reading-and-writing-QLA-arrays.html  Reductions-on-subsets.html  Reductions.html  Shift.html  Shifts.html  Specific-Types-for-Color-and-Precision.html  String-Handling.html  Subsets.html  (+5 more)
qdpc.html/CVS/: Entries  Repository
